# organvm-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  ecosystem.yaml  network-map.yaml  pyproject.toml  seed.yaml
.claude/plans/: 2026-03-07-conductor-directive-ingestion.md  2026-03-07-process-self-analysis-findings.md  2026-03-11-formal-verification-module.md
.codex/plans/: 2026-03-05-expand-registry-features-and-functions.md  (+1 more)
.github/: dependabot.yml
.sops/: cli-module-pattern.md  prompting-standards.md
notebooks/: prompt-audit.ipynb
scripts/: consolidate-workspace.py
tests/: conftest.py  test_atoms_linker.py  test_atoms_pipeline.py  test_atoms_reconciler.py  test_atoms_rollup.py  test_atoms_summary.py  test_audit.py  test_audit_absorption.py  test_audit_content.py  test_audit_coordinator.py  test_audit_edges.py  test_audit_filesystem.py  test_audit_reconcile.py  test_audit_seeds.py  test_audit_types.py  test_authority.py  test_authorization.py  test_ci.py  test_ci_audit.py  test_claudemd.py  test_cli.py  test_cli_content.py  test_cli_institutional.py  test_cli_ontologia_mutations.py  test_cli_taxonomy.py  test_clipboard_classifier.py  test_clipboard_export.py  test_clipboard_pipeline.py  test_clipboard_schema.py  test_clipboard_session.py  test_composition_engine.py  test_composition_operators.py  test_composition_prohibitions.py  test_consilience.py  test_content_cadence.py  test_content_reader.py  test_content_signals.py  test_context_surfaces.py  test_contextmd.py  test_contrib.py  (+163 more)
(+292 files in other folders)
